# TaskWeave

./: .dockerignore  .gitignore  API.md  ARCHITECTURE.md  CMakeLists.txt  Dockerfile  PROJECT_SUMMARY.md  Readme.md  build.ps1  build.sh  build_cmake.ps1  build_cmake.sh  docker-compose.yml  run_tests.ps1  run_tests.sh  tasks.json  test_api.ps1
api/: ApiServer.cpp  ApiServer.h
core/: TaskDefinition.h  TaskLoader.cpp  TaskLoader.h  TaskRegistry.cpp  TaskRegistry.h
src/: config.ini  main.cpp
src/core/: EngineState.h  Task.cpp  Task.h  TaskState.h
src/executor/: ThreadPool.cpp  ThreadPool.h
src/scheduler/: PriorityScheduler.cpp  PriorityScheduler.h  RoundRobinScheduler.cpp  RoundRobinScheduler.h  Scheduler.h
tests/: test_scheduler.cpp  test_task.cpp  test_task_loader.cpp
utils/: Config.cpp  Config.h  Database.cpp  Database.h  Logger.h  Metrics.cpp  Metrics.h
